update get jobs API endpoint to have sort option
This change will require that the associated change also be present in
SEAMM datastore. This commit also adds a table to the front page which
shows the 5 most recent jobs.
